[package]
name = "lazy-queue"
version = "0.1.1"
authors = ["mexus <gilaldpellaeon@gmail.com>"]
edition = "2018"
description = "Futures-driven lazy queue processing"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["futures", "queue"]
documentation = "https://docs.rs/lazy-queue/"
repository = "https://github.com/mexus/lazy-queue"
homepage = "https://github.com/mexus/lazy-queue"

[dependencies]
futures = "0.1.21"
tokio-sync = "0.1.3"

[dev-dependencies]
tokio = "0.1.7"
